--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.18.2",
+    "mariadb": "^3.2.3",
     "mysql": "^2.18.1",
     "nodemon": "^3.0.2"
   }
